refactor: minor code improvements